@@ -34,6 +34,8 @@ Version 1.5.6+svn:
  * Unit changes and balancing:
    * Increased the cost of the Goblin Spearman from 8 to 9.
  * User interface:
+   * Recruit, recall, unit-list and create-unit dialogs display the
+     selected unit/unit-type's race.
    * Rewrote the layout algorithm for the new widgets.
    * Fixed the font loading when the data directory is overridden.
    * Removed text wrapping around background image in story screens; it is
